@@ -24,7 +24,7 @@ class CDiv extends CTag {
 	public function __construct($items = null, $class = null, $id = null) {
 		parent::__construct('div', 'yes');
 		$this->attr('class', $class);
-		if (!empty($id)) {
+		if ($id) {
 			$this->attr('id', zbx_formatDomId($id));
 		}
 		$this->addItem($items);
@@ -40,11 +40,5 @@ class CDiv extends CTag {
 
 	public function useJQueryStyle() {
 		$this->setAttribute('class', $this->getAttribute('class').' jqueryinputset');
-		if (!defined('ZBX_JQUERY_INPUTSET')) {
-			define('ZBX_JQUERY_INPUTSET', true);
-			zbx_add_post_js('setTimeout(function() { jQuery("div.jqueryinputset").buttonset(); }, 10);');
-		}
-
-		return $this;
 	}
 }
