@@ -53,7 +53,6 @@ if (isset($DB) && isset($DB['TRANSACTIONS']) && $DB['TRANSACTIONS'] != 0) {
 
 show_messages();
 
-$post_script = '';
 if (in_array($page['type'], array(PAGE_TYPE_HTML_BLOCK, PAGE_TYPE_HTML))) {
 	if (!is_null(CWebUser::$data) && isset(CWebUser::$data['debug_mode']) && CWebUser::$data['debug_mode'] == GROUP_DEBUG_MODE_ENABLED) {
 		CProfiler::getInstance()->stop();
@@ -62,29 +61,6 @@ if (in_array($page['type'], array(PAGE_TYPE_HTML_BLOCK, PAGE_TYPE_HTML))) {
 }
 
 if ($page['type'] == PAGE_TYPE_HTML) {
-	$post_script .= 'var page_refresh = null;'."\n";
-	$post_script .= "jQuery(function() {\n";
-
-	if (isset($ZBX_PAGE_POST_JS)) {
-		foreach ($ZBX_PAGE_POST_JS as $script) {
-			$post_script .= $script."\n";
-		}
-	}
-
-	if (defined('ZBX_PAGE_DO_REFRESH') && CWebUser::$data['refresh']) {
-		$post_script .= 'PageRefresh.init('.(CWebUser::$data['refresh'] * 1000).');'."\n";
-	}
-
-	if (isset($page['scripts']) && in_array('flickerfreescreen.js', $page['scripts'])) {
-		$post_script .= 'window.flickerfreeScreenShadow.timeout = '.SCREEN_REFRESH_TIMEOUT.' * 1000;'."\n";
-		$post_script .= 'window.flickerfreeScreenShadow.responsiveness = '.SCREEN_REFRESH_RESPONSIVENESS.' * 1000;'."\n";
-	}
-
-	// the chkbxRange.init() method must be called after the inserted post scripts
-	$post_script .= "cookie.init();\n";
-	$post_script .= "chkbxRange.init();\n";
-	$post_script .= '});'."\n";
-
 	if (!defined('ZBX_PAGE_NO_MENU') && !defined('ZBX_PAGE_NO_FOOTER')) {
 		$table = new CTable(null, 'textwhite bold maxwidth ui-widget-header ui-corner-all page_footer');
 
@@ -111,7 +87,7 @@ if ($page['type'] == PAGE_TYPE_HTML) {
 		$table->show();
 	}
 
-	insert_js($post_script);
+	require_once 'include/views/js/common.init.js.php';
 
 	echo '</body>'."\n".
 		'</html>'."\n";
